# chapterss

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
chapterss/: detect_dividers.py  detect_markers.py  extract_clips.py  insert_chapters.py  server.py  summarise.py  transcribe.py
